--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <h1>Image Feed</h1>
-    <img id="image_feed" src="{{ url_for('video_feed/{{cctv_id}}') }}" />
-    <div>{{ cctv_id }}</div>
+    <img id="image_feed" src="{{ url_for('video_feed', cctv_id=cctv_id) }}" />
   </body>
 </html>
