--- a/Flask/main/templates/index.html
+++ b/Flask/main/templates/index.html
@@ -4,6 +4,11 @@
     <title>YOLO</title>
   </head>
   <body>
-    <img id="image_feed" src="{{ url_for('stream', cctv_id=cctv_id) }}" />
+    <img
+      width="100%"
+      height="100%"
+      id="image_feed"
+      src="{{ url_for('stream', cctv_id=cctv_id) }}"
+    />
   </body>
 </html>
