[FEAT] 이미지 전송

--- a/Flask/main/templates/index.html
+++ b/Flask/main/templates/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>YOLO</title>
+    <link rel="shortcut icon" href="#" />
   </head>
   <body>
     <img id="image_feed" src="{{ url_for('stream', cctv_id=cctv_id) }}" />
