[FIX] CCTV 이미지 1초마다 전송 오류 수정

--- a/Flask/main/templates/index.html
+++ b/Flask/main/templates/index.html
@@ -5,6 +5,15 @@
     <link rel="shortcut icon" href="#" />
   </head>
   <body>
-    <img id="image_feed" src="{{ url_for('stream', cctv_id=cctv_id) }}" />
+    <img id="video" src="{{ url_for('stream', cctv_id=cctv_id) }}" />
+    <script>
+      function updateImage() {
+        var video = document.getElementById("video");
+        video.src =
+          "{{ url_for('stream', cctv_id=cctv_id) }}" + "?rand=" + Math.random();
+      }
+
+      setInterval(updateImage, 1000);
+    </script>
   </body>
 </html>
