--- a/Flask/main/templates/index.html
+++ b/Flask/main/templates/index.html
@@ -2,15 +2,19 @@
 <html>
   <head>
     <title>YOLO</title>
-    <link rel="shortcut icon" href="#" />
+    <link rel="icon" href="#" />
   </head>
   <body>
-    <img id="video" src="{{ url_for('stream', cctv_id=cctv_id) }}" />
+    <img id="image" src="{{ url_for('stream', cctv_id=cctv_id) }}" />
     <script>
       function updateImage() {
-        var video = document.getElementById("video");
-        video.src =
-          "{{ url_for('stream', cctv_id=cctv_id) }}" + "?rand=" + Math.random();
+        // timestamp -> 랜덤값을 붙여주지 않으면 캐시 때문에 이미지 업데이트 안됨.
+        const now = new Date();
+        const timestamp = Math.floor(now.getTime() / 1000);
+
+        const image = document.getElementById("image");
+        image.src =
+          "{{ url_for('stream', cctv_id=cctv_id) }}" + "?time=" + timestamp;
       }
 
       setInterval(updateImage, 1000);
